--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/Css/Style.css">
-    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Josefin+Sans" rel="stylesheet">
     <link rel="icon" type="image/png" href="/Image/favicon-bed.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Hotel Express</title>
