--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Css/Style.css">
-    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Josefin+Sans" rel="stylesheet">
     <link rel="stylesheet" href="/Css/indexStyle.css">
     <link rel="icon" type="image/png" href="/Image/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,16 +13,16 @@
 </head>
 <body class="indexBackground">
     <header><h6>.</h6></header>
-    <div class="col-md-12 col-sm-12 col-xs-12"><nav class=" navbar navbar-inverse"><div class="container-fluid"><div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand">Hotel Reservation</a></div><div class="collapse navbar-collapse" id="myNavbar"><ul class=" nav navbar-nav navbar-right "><li class="navbar-nav nav"><li><a href="#">Home</a></li><li><a href="#">About Us</a></li><li><a href="#">Feedback</a></li><li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a><ul class="dropdown-menu"><li><a href="#">Sign In</a></li><li><a href="#">Create An Account</a></li></ul></li></ul></div></div></nav></div>
+    <div class="col-md-12"><nav class=" navbar navbar-inverse"><div class="container-fluid"><div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand">Hotel Reservation</a></div><div class="collapse navbar-collapse" id="myNavbar"><ul class=" nav navbar-nav navbar-right "><li class="navbar-nav nav"><li><a href="#">Home</a></li><li><a href="#">About Us</a></li><li><a href="#">Feedback</a></li><li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a><ul class="dropdown-menu"><li><a href="#">Sign In</a></li><li><a href="#">Create An Account</a></li></ul></li></ul></div></div></nav></div>
     <article>
         <div class="container heading">
             <div id="hotelSearch">
                 <form id="hotelSearchForm" onsubmit="extractData(); return false">
                     <div class="row">
-                        <div class="col-md-12 col-xs-12">
+                        <div class="col-md-12 col-sm-12 col-xs-12">
                             <section>
                                 <div class="row">
-                                    <div class="col-md-12 col-xs-12">
+                                    <div class="col-md-12 col-sm-12 col-xs-12">
                                         <div class="col-md-10 col-xs-12">
                                             <div class="form-group">
                                                 <label for="place">Going To</label>
@@ -43,7 +43,7 @@
                                                 <label>Check-In</label>
                                                 <div class="inner-addon left-addon">
                                                     <i class="glyphicon glyphicon-calendar black"></i>
-                                                    <input class="form-control datePicker placeholderfont" type="text" name="checkin" placeholder="yyyy-mm-dd" id="checkindate" required>
+                                                    <input class="form-control placeholderfont" type="text" name="checkin" placeholder="yyyy-mm-dd" id="checkindate" required>
                                                 </div>
                                             </div>
                                         </div>
