--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
@@ -10,6 +10,15 @@
     <link rel="icon" type="image/png" href="/Image/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/ui-darkness/jquery-ui.min.css" />
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        !function () {
+            $.get("navbar.html", (data) => {
+                console.log(data);
+            });
+        }();
+    </script>
 </head>
 <body class="indexBackground">
     <header><h6>.</h6></header>
@@ -106,8 +115,6 @@
         </div>
     </article>
     <footer class="foot text-center">Tavisca &copy; 2017|<a class="black" href="http://www.tavisca.com/">Open Company Website</a></footer>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="/Js/autoSuggestScript.js"></script>
 </body>
