--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -25,7 +25,7 @@
                 <section>
                     <div class="col-md-3  col-sm-4 col-xs-12">
                         <div class="container-image">
-                            <img src="{{image}}" width="225" height="225" class="image responsive image" alt="No Image Available" />
+                            <img src="{{image}}" class="image responsive image" alt="No Image Available" />
                             <div class="overlay">
                                 <div class=" underline-text text">Base Fare : {{currency}} {{fare}}</div>
                             </div>
