--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/index.html
@@ -10,15 +10,15 @@
     <link rel="icon" type="image/png" href="/Image/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/ui-darkness/jquery-ui.min.css" />
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script>
+    <!--<script>
         !function () {
-            $.get("navbar.html", (data) => {
+            $()get("navbar.html", (data) => {
                 console.log(data);
             });
         }();
-    </script>
+    </script>-->
 </head>
 <body class="indexBackground">
     <header><h6>.</h6></header>
