--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -9,33 +9,59 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Hotel Express</title>
 </head>
+
 <body>
     <header><h6>.</h6></header>
     <div class="col-md-12"><nav class=" navbar navbar-inverse"><div class="container-fluid"><div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand">Hotel Reservation</a></div><div class="collapse navbar-collapse" id="myNavbar"><ul class=" nav navbar-nav navbar-right "><li class="navbar-nav nav"><li><a href="#">Home</a></li><li><a href="#">About Us</a></li><li><a href="#">Feedback</a></li><li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a><ul class="dropdown-menu"><li><a href="#">Sign In</a></li><li><a href="#">Create An Account</a></li></ul></li></ul></div></div></nav></div>
     <div id="roomList-container"><div class="loader"></div></div>
     <div id="roomList-container"></div>
     <script id="x" type="text/x-handlebars-template">
-        <div class="text-center"><h1>Avaliable Rooms</h1></div>
+        <div class="text-center"><h1>Avaliable Rooms </h1></div>
         <div class="container container-list heading border-panel">
             <div class="col-md-12 col-sm-12 col-xs-12 wrapper">
                 <div class="col-md-3  col-sm-4 col-xs-12">
-                    <img src="{{imageurl}}" class="img-responsive" alt="No Image Available" />
+                    <div id="sliderCarousel" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <img src="{{imageurl}}" class="img-responsive" alt="No Image Available" />
+                            {{#each images}}
+                            {{#ifCond @index 0 }}
+                            <div class="item" style="width:920px; height:400px;">
+                                <img src="{{this}}" alt="room-img" style="width:100%;height:100%;" class="img-responsive">
+                            </div>
+                            {{else}}
+
+                            <div class="item active" style="width:920px; height:400px;">
+                                <img src="{{this}}" alt="room-img" style="width:100%;height:100%;" class="img-responsive">
+                            </div>
+                            {{/ifCond}}
+                            {{/each}}
+                        </div>
+                        <!-- Left and right controls -->
+                        <a class="left carousel-control" href="#sliderCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#sliderCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-6 col-sm-4 col-xs-12">
-                    <h3 class="underline-text">{{hotelname}}</h3>
-                    <h4 class="bold-text"><span class="glyphicon glyphicon-map-marker green"></span> {{address}}</h4>
-                    <h4 class="bold-text">
-                        Rating:{{#times rating}}
-                        <span class="glyphicon glyphicon-star orange"></span>
-                        {{/times}}
-                    </h4>
-                    <h4 class="bold-text">Duration : {{duration}} Day</h4>
+                        <div class="col-md-6 col-sm-4 col-xs-12">
+                            <h3 class="underline-text">{{hotelname}}</h3>
+                            <h4 class="bold-text"><span class="glyphicon glyphicon-map-marker green"></span> {{address}}</h4>
+                            <h4 class="bold-text">
+                                Rating:{{#times rating}}
+                                <span class="glyphicon glyphicon-star orange"></span>
+                                {{/times}}
+                            </h4>
+                            <h4 class="bold-text">Duration : {{duration}} Day</h4>
+                        </div>
+                        <div class="col-md-3 col-sm-4 col-xs-12 hidden-xs">
+                            <iframe class="map-bottom" width="200" height="200" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCIYzzzQZGLWDSOSovKWaq2UsyX1dQ796c&q={{this.latitude}},{{this.longitude}}" allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-xs-12 hidden-xs">
-                    <iframe class="map-bottom" width="200" height="200" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCIYzzzQZGLWDSOSovKWaq2UsyX1dQ796c&q={{this.latitude}},{{this.longitude}}" allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
     </script>
     <div id="roomList-container">
     </div>
@@ -71,5 +97,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
     <script src="/Js/roomListingScript.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
