--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header><h6>.</h6></header>
-    <div class="col-md-12"><nav class=" navbar navbar-inverse"><div class="container-fluid"><div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand">Hotel Reservation</a></div><div class="collapse navbar-collapse" id="myNavbar"><ul class=" nav navbar-nav navbar-right "><li class="navbar-nav nav"><li><a href="#">Home</a></li><li><a href="#">About Us</a></li><li><a href="#">Feedback</a></li><li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a><ul class="dropdown-menu"><li><a href="#">Sign In</a></li><li><a href="#">Create An Account</a></li></ul></li></ul></div></div></nav></div>
+    <div class="col-md-12"><nav class=" navbar navbar-inverse"><div class="container-fluid"><div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand">Hotel Reservation</a></div><div class="collapse navbar-collapse" id="myNavbar"><ul class=" nav navbar-nav navbar-right "><li class="nav"><li><a href="#">Home</a></li><li><a href="#">About Us</a></li><li><a href="#">Feedback</a></li><li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a><ul class="dropdown-menu"><li><a href="#">Sign In</a></li><li><a href="#">Create An Account</a></li></ul></li></ul></div></div></nav></div>
     <div id="hotelList-container"><div class="loader"></div></div>
     <div id="hotelList-container"></div>
     <script id="hotel-item" type="text/x-handlebars-template">
@@ -21,12 +21,17 @@
         <div class="container container-list border-panel">
             <div class="col-md-12 col-xs-12">
                 <section>
-                    <div class="col-md-3  col-sm-5 col-xs-12">
-                        <img src="{{image}}" class="img-responsive" alt="No Image Available" />
+                    <div class="col-md-3  col-sm-4 col-xs-12">
+                        <div class="container-image">
+                            <img src="{{image}}" class="img-responsive image" alt="No Image Available" />
+                            <div class="overlay">
+                                <div class=" underline-text text">Base Fare : {{currency}} {{fare}}</div>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <section>
-                    <div class="col-md-6  col-sm-5 col-xs-12">
+                    <div class="col-md-8  col-sm-8 col-xs-12">
                         <h3 class="underline-text">{{name}}</h3>
                         <h4>Base Fare : {{currency}} <span class="bold-text">{{fare}}</span></h4>
                         <h4 class="bold-text">
@@ -35,10 +40,11 @@
                             {{/times}}
                         </h4>
                         <h4><span class="glyphicon glyphicon-map-marker green"></span> {{address}}</h4>
+                        <p class="description"><span class="glyphicon glyphicon-map-list green"></span>{{description}}</p>
                     </div>
                 </section>
                 <section>
-                    <div class="col-md-3 col-sm-2 col-xs-12">
+                    <div class="col-md-1 col-sm-12 col-xs-12">
                         <button name="viewRoomsBtn" id="viewRoomsButton" value="{{name}}" onClick="roomDetails(this)" class="pageButton">View Rooms</button>
                     </div>
                 </section>
