added some changes

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -16,7 +16,7 @@
     <div id="hotelList-container"><div class="loader"></div></div>
     <div id="hotelList-container"></div>
     <script id="hotel-item" type="text/x-handlebars-template">
-        <div><h1><span class="glyphicon glyphicon-search"></span>Search Results</h1></div>
+        <div><h1 class="text-center"><span class="glyphicon glyphicon-search"></span> Search Results</h1></div>
         {{#each this}}
         <div class="container container-list border-panel">
             <div class="col-md-12 col-xs-12">
